--- a/fridge-magnet/main/CMakeLists.txt
+++ b/fridge-magnet/main/CMakeLists.txt
@@ -6,9 +6,8 @@ set(COMPONENT_SRCS
 set(COMPONENT_ADD_INCLUDEDIRS
                     "."
                     "${CMAKE_CURRENT_LIST_DIR}"
-                    }
 )
 
-idf_component_register(SRCS "{COMPONENTS_SRCS}"
+idf_component_register(SRCS "${COMPONENTS_SRCS}"
                     INCLUDE_DIRS ${COMPONENT_ADD_INCLUDEDIRS}
                     )
