Added testing project for testing hardware (and also practice

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fridge-magnet/components/ESP32-audioI2S"]
 	path = fridge-magnet/components/ESP32-audioI2S
 	url = git@github.com:schreibfaul1/ESP32-audioI2S.git
+[submodule "test-sd-audio-player/components/esp32-HD44780"]
+	path = test-sd-audio-player/components/esp32-HD44780
+	url = git@github.com:bradkeifer/esp32-HD44780.git
