--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "s3-bucket-upload-download-test/components/esp32-HD44780"]
 	path = s3-bucket-upload-download-test/components/esp32-HD44780
 	url = git@github.com:bradkeifer/esp32-HD44780.git
+[submodule "pi-fridge-magnet/python_lcd"]
+	path = pi-fridge-magnet/python_lcd
+	url = git@github.com:dhylands/python_lcd.git
