Put together different parts of the repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "esp32-fridge-magnet/fridge-magnet/components/esp32-HD44780"]
 	path = esp32-fridge-magnet/fridge-magnet/components/esp32-HD44780
 	url = git@github.com:bradkeifer/esp32-HD44780.git
+[submodule "cciot_fridge_deploy"]
+	path = cciot_fridge_deploy
+	url = git@github.com:D-Mathew/cciot_fridge_deploy.git
